<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/Theme.AlcoolGasolina.Opicional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        tools:context=".MainActivity"
        android:padding="30dp">

    <ImageView android:id="@+id/imgViewPrincipal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:src="@drawable/logo"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintVertical_bias="0.3"/>

    <TextView android:id="@+id/txtViewMelhorOpcao"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:text="@string/strSaibaMelhorOpcao"
              app:layout_constraintTop_toBottomOf="@id/imgViewPrincipal"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputGroupAlcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtViewMelhorOpcao">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/precoAlcool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/strInsiraPrecoAlcool"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputGroupGasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/textInputGroupAlcool">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/precoGasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/strInsiraPrecoGasolina"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strCalcular"
            android:layout_marginTop="5dp"
            android:theme="@style/Theme.AlcoolGasolina.Opicional"
            app:layout_constraintTop_toBottomOf="@id/textInputGroupGasolina"/>

    <TextView android:id="@+id/melhorCombustivel"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:textAlignment="center"
              android:text="@string/strMelhorCombustivel"
              app:layout_constraintTop_toBottomOf="@id/btnCalcular"/>


</androidx.constraintlayout.widget.ConstraintLayout>